# TTV

./: .gitignore  CMakeLists.txt  README.md
Dependencies/libvlc/include/vlc/: libvlc_media.h
Dependencies/libvlc/lib/: libvlc.lib  libvlccore.lib
Resources/: playlist.tivi  shader.frag  shader.vert
Source/: Application.cpp  Application.h  config.h  main.cpp
Source/Graphics/: Shader.h  Texture.h  UserInterface.cpp  UserInterface.h  Window.cpp  Window.h
Source/Stream/: Stream.cpp  Stream.h
Source/Utils/: HTTP.cpp
Source/Video/: Stream.cpp  Stream.h
cmake_modules/: FindCURL.cmake  FindFFMPEG.cmake  FindLIBVLC.cmake
